🩹 Fix link color in dark mode

--- a/src/routes/[lang]/blog/post/[slug].scss
+++ b/src/routes/[lang]/blog/post/[slug].scss
@@ -2,7 +2,7 @@
 	@apply max-w-2xl;
 
 	a {
-		@apply text-sky-700 gdark:text-blue-200 hover:text-blue-700 gdark:hover:text-sky-600 transition-colors;
+		@apply text-sky-700 dark:text-blue-200 hover:text-blue-700 dark:hover:text-sky-600 transition-colors;
 	}
 
 	h2 {
